--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Print Hello</title>
-</head>
-<body>
-    <h1>Contact</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+Contact
+{% endblock %}
+
+{% block content %}
+<p>Contact page</p>
+{% endblock content %}
