--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
       href=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css ">
     <link rel="stylesheet"
       href="{% static '/css/style.css'%}">
-
+   
   </head>
 
   <body>
@@ -85,6 +85,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
 
+      <script src="{% static '/javascript/carousel.js' %}"></script>
 
   </body>
 
