--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,37 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}
 Index
 {% endblock %}
 
 {% block content %}
-<p>Index page</p>
+<div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="{% static "/images/car1.jpg"%}" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="{% static "/images/car2.jpg" %}" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="{% static "/images/car3.jpg" %}" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+  
+  <a class="prev" onclick="plusSlides(-1)">❮</a>
+  <a class="next" onclick="plusSlides(1)">❯</a>
+  
+  </div>
+  <br>
+  
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span> 
+    <span class="dot" onclick="currentSlide(2)"></span> 
+    <span class="dot" onclick="currentSlide(3)"></span> 
+  </div>
 {% endblock content %}
