--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
 Booking
 {% endblock %}
 
 {% block content %}
-<p>Booking page</p>
+<div class="container w-50 text-center my-5 bg-info">
+
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{ form |crispy}}
+        <button type="submit"class="btn btn-primary">Submit</button>
+        <hr>
+    </form>
+</div>
+
 {% endblock content %}
